--- a/4.Sistema/frontend/src/components/FormCard/styles.css
+++ b/4.Sistema/frontend/src/components/FormCard/styles.css
@@ -39,6 +39,7 @@
 .dsmovie-card-bottom-container h4 {
   font-size: 14px;
   padding: 0 10px 20px 10px;
+  text-align: justify;
 }
 
 .dsmovie-card-bottom-container h3 {
