Implementation of the final comment

--- a/4.Sistema/frontend/src/components/FormComment/styles.css
+++ b/4.Sistema/frontend/src/components/FormComment/styles.css
@@ -82,11 +82,12 @@
 .dsmovie-form-container-comment {
     background-color: #fff;
     max-width: 640px;
-    margin: 50px auto;
+    height: 150px;
+    margin: 15px auto 10px 0;
     justify-content: center;
     padding: 10px;
-    display: flex;
     align-items: center;
+    font-size: 17px;
     border-radius: 8px 8px 8px 8px;
   }
 
@@ -100,3 +101,7 @@
   color: #aaa;
 }
 
+.dsmovie-form-comment {
+  font-size: 15px;
+  color: #666;
+}
