--- a/4.Sistema/frontend/src/components/FormCard/styles.css
+++ b/4.Sistema/frontend/src/components/FormCard/styles.css
@@ -12,6 +12,10 @@
   margin-bottom: 20px;
 }
 
+.dsmovie-form-group input {
+  height: 100px;
+}
+
 .dsmovie-form-group label {
   font-size: 12px;
   color: #aaa;
