--- a/4.Sistema/frontend/src/pages/Form/stylesForm.css
+++ b/4.Sistema/frontend/src/pages/Form/stylesForm.css
@@ -1,14 +1,11 @@
 
 .dsmovie-form-container-comment-userComments {
-position: center;
-width: 721px;
-height: 254px;
-left: 135px;
-top: 1256px;
-
-background: #FFFFFF;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 8px;
+  width: 680px;
+  padding: 20px;
+  margin: 40px auto;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
 }
 
 .dsmovie-form-comment-intro {
